INCLUDE_DIRECTORIES(${TOP_SOURCE_DIR}/libs/include)
INCLUDE_DIRECTORIES(${TOP_SOURCE_DIR}/server/sctrl)
INCLUDE_DIRECTORIES(${TOP_SOURCE_DIR}/module/include)
INCLUDE_DIRECTORIES(${TOP_SOURCE_DIR}/porting/include)
INCLUDE_DIRECTORIES(${TOP_SOURCE_DIR}/porting/${BOARD}/include)

PROJECT(GB28181_LIB)

SET(GB28181_SRC
		mgb28181.c
        )

ADD_LIBRARY(gb28181 STATIC ${GB28181_SRC})
 
 
