

INCLUDE_DIRECTORIES(${IPCAM_SOURCE_DIR}/libs/include)
INCLUDE_DIRECTORIES(${IPCAM_SOURCE_DIR}/porting/include)
INCLUDE_DIRECTORIES(${IPCAM_SOURCE_DIR}/module/include)
INCLUDE_DIRECTORIES(${IPCAM_SOURCE_DIR}/server/sport)


PROJECT(OSD_SERVER)

SET(OSD_SERVERSRC
				osd_server.c

	)

ADD_LIBRARY(osd_server STATIC ${OSD_SERVERSRC})
