

INCLUDE_DIRECTORIES(${IPCAM_SOURCE_DIR}/libs/include)
INCLUDE_DIRECTORIES(${IPCAM_SOURCE_DIR}/libs/include/bls)
INCLUDE_DIRECTORIES(${IPCAM_SOURCE_DIR}/porting/include)
INCLUDE_DIRECTORIES(${IPCAM_SOURCE_DIR}/module/include)
INCLUDE_DIRECTORIES(${IPCAM_SOURCE_DIR}/server/sport)
INCLUDE_DIRECTORIES(${IPCAM_SOURCE_DIR}/server/sctrl)

PROJECT(WEBER)

SET(WEBERSRC
				weber.c
				webcmd.c
	)

ADD_LIBRARY(weber STATIC ${WEBERSRC})

if (WEB_SUPPORT)
ADD_SUBDIRECTORY(html)
ADD_SUBDIRECTORY(wagent)
ADD_SUBDIRECTORY(proccgi)
ADD_SUBDIRECTORY(transfer)
ADD_SUBDIRECTORY(getsnapshot)
endif()